# TemplateRepoCxx

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  cmake_build_debug.sh
cmake/: check_arch.cmake
docs/: CONFIG.md
example/: CMakeLists.txt  example01.cpp
examples/: CMakeLists.txt  example01.cpp
lib/: CMakeLists.txt  add.cpp  math_utils.cpp
libs/: CMakeLists.txt  add.cpp
src/: CMakeLists.txt  main.cpp
src/core/impl/: circle.cpp  rectangle.cpp
src/core/include/: circle.h  rectangle.h  shape.h
src/utils/impl/: logger.cpp
src/utils/include/: logger.h
test/: CMakeLists.txt  foo_1.cpp  foo_2.cpp  test_1.cpp  test_2.cpp
test/sub_foo/: sub_foo_1.cpp  sub_test_1.cpp
tests/: CMakeLists.txt  test01.cpp  test02.cpp
tests/unit/: test_circle.cpp  test_rectangle.cpp
